# cli-uv

./: LICENSE  README.md  pyproject.toml
src/cli_uv/: __init__.py  main.py
src/cli_uv/utils/: module_1.py
