[project]
name = "cli-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xa2n", email = "82438827+xa2n@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
cli-uv = "cli_uv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "rich>=13.9.4",
]
